SSCS-11856 Missing format call